--- a/GitRemote/GitRemote.csproj
+++ b/GitRemote/GitRemote.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GitTools.Core" Version="1.3.2" />
+    <PackageReference Include="GitLabApiClient" Version="1.0.8" />
   </ItemGroup>
 
 </Project>
